fix h1 overflow

--- a/src/pages/about.css
+++ b/src/pages/about.css
@@ -1,5 +1,5 @@
 @media screen and (max-width: 895px) {
-    h1 {
+    #about h1 {
         bottom: 20%;
         top: 20%;
         transform: translate(-70%, 70%);
@@ -7,7 +7,7 @@
 }
 
 @media screen and (max-width: 576px) {
-    h1 {
+    #about h1 {
         bottom: 20%;
         top: 20%;
         transform: translate(-70%, 70%);
